--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
 }
 
 dependencies {
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
     def fragment_version = "1.5.2"
 
     implementation("androidx.fragment:fragment-ktx:$fragment_version")
